--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
+    "start": "nodemon src/server.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -10,10 +11,17 @@
     "url": "https://github.com/epam/epmgcip-zeroharm.be"
   },
   "dependencies": {
+    "axios": "^1.6.7",
     "dotenv": "^16.4.5",
+    "express": "^4.18.3",
     "firebase-admin": "^12.0.0"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
+    "@types/dotenv": "^8.2.0",
+    "@types/express": "^4.17.21",
+    "nodemon": "^3.1.0",
+    "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   }
 }
