--- a/functions/package.json
+++ b/functions/package.json
@@ -12,7 +12,7 @@
   "engines": {
     "node": "18"
   },
-  "main": "lib/index.js",
+  "main": "lib/expressRestApi/index.js",
   "dependencies": {
     "axios": "^1.6.7",
     "dotenv": "^16.4.5",
