--- a/functions/package.json
+++ b/functions/package.json
@@ -12,16 +12,18 @@
   "engines": {
     "node": "18"
   },
-  "main": "lib/expressRestApi/index.js",
+  "main": "lib/index.js",
   "dependencies": {
     "axios": "^1.6.7",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "firebase-admin": "^11.11.1",
-    "firebase-functions": "^4.3.1"
+    "firebase-functions": "^4.3.1",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/uuid": "^9.0.8",
     "firebase-functions-test": "^3.1.0",
     "typescript": "^4.9.0"
   },
